--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-27  Stepan Kasal  <kasal@ucw.cz>
+
+	* m4/ltoptions.m4 (_LT_UNLESS_OPTIONS, _LT_SET_OPTIONS): Replace
+	AC_FOREACH by a combination of m4_foreach/m4_split/m4_normalize.
+
 2005-06-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* m4/ltoptions.m4 (_LT_SET_OPTIONS): Remove unnecessary workaround
