--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-06-27  Stepan Kasal  <kasal@ucw.cz>
 
+	* m4/ltsugar.m4 (lt_combine, _lt_combine): Fix default separator.
+
 	* m4/ltoptions.m4 (_LT_UNLESS_OPTIONS, _LT_SET_OPTIONS): Replace
 	AC_FOREACH by a combination of m4_foreach/m4_split/m4_normalize.
 
@@ -30,6 +32,7 @@
 	m4_car/m4_cdr with the fixed semantics of Autoconf-2.59c CVS, in
 	order to work with 2.59.
 	(lt_combine): Use it.
+	Reported by Christoph Egger <Christoph_Egger@gmx.de>.
 
 2005-06-11  Ralf Menzel  <menzel@ls6.cs.uni-dortmund.de>,
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
