--- a/THANKS
+++ b/THANKS
@@ -69,6 +69,7 @@
   Bruno Haible			haible@ilog.fr
   Carl D. Roth			roth@cse.ucsc.edu
   Chris P. Ross			cross@eng.us.uu.net
+  Dalibor Topic			robilad@kaffe.org
   Daniel Reed			n@ml.org
   DJ Delorie			dj@delorie.com
   Edouard G. Parmelan		Edouard.Parmelan@France.NCR.COM
@@ -95,8 +96,10 @@
   Ralf Menzel			menzel@ls6.cs.uni-dortmund.de
   Robert Ögren			lists@roboros.com
   Sebastian Wilhelmi		wilhelmi@ira.uka.de
+  Stepan Kasal			kasal@ucw.cz
   Stephan Kulow			coolo@kde.org
   Steven M. Schultz		sms@wlv.iipo.gtegsc.com
+  Sven Verdoolaege		skimo@liacs.nl
   Tim Mooney			mooney@dogbert.cc.ndsu.NoDak.edu
   Todd Vierling			tv@pobox.com
   Tom Tromey			tromey@cygnus.com
