--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* THANKS: Updated.
+
 2005-06-28  Stepan Kasal  <kasal@ucw.cz>
 
 	* clcommit.m4sh: "grep|sed" can be replaced by mere "sed".
