--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* THANKS: Updated.
+
 2005-06-21  Peter O'Gorman  <peter@pogma.com>
 
 	* ltmain.in [darwin]: Accept -arch flag.
