--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* config/ltmain.m4sh (func_mode_compile, func_mode_link),
+	m4/libtool.m4 (_LT_PROG_ECHO_BACKSLASH, _LT_ENABLE_LOCK):
+	Remove some unnecessary quotes.
+
 2005-07-01  Derek R. Price  <derek@ximbiot.com>
 
 	* config/ltmain.m4sh (func_mode_link) <shell wrapper>: Handle
