--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2005-06-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)
+
+	* ltmain.in (compile mode, link mode),
+	libtool.m4 (_LT_AC_PROG_ECHO_BACKSLASH, _LT_AC_LOCK,
+	AC_LIBTOOL_SYS_DYNAMIC_LINKER,  AC_PATH_TOOL_PREFIX,
+	AC_DEPLIBS_CHECK_METHOD,   AC_LIBTOOL_LANG_C_CONFIG,
+	AC_LIBTOOL_LANG_CXX_CONFIG,  AC_LIBTOOL_POSTDEP_PREDEP,
+	AC_LIBTOOL_LANG_F77_CONFIG,  AC_LIBTOOL_PROG_COMPILER_PIC,
+	AC_LIBTOOL_PROG_LD_SHLIBS): Remove some unnecessary quotes.
+
 2005-07-01  Derek R. Price  <derek@ximbiot.com>
 
 	* ltmain.in (link mode): Handle spaces in paths to executed
