--- a/THANKS
+++ b/THANKS
@@ -55,6 +55,7 @@
   Nick Hudson			skrll@netbsd.org		  2004-03-29
   Paolo Bonzini			bonzini@gnu.org			  2003-03-01
   Noah Jeffrey Misch		noah@cs.caltech.edu		  2004-07-05
+  Thorsten Glaser		tg@66h.42h.de			  2004-10-11 
   Peter Ekberg			peda@lysator.liu.se		  2005-04-12
 
 
