--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.in (install mode): Do not assume `-f' needs an argument if
+	the install program is `cp'.  Cleanup install mode somewhat.
+	Reported by Juergen Leising <juergen.leising@gmx.de>.
+
 2005-07-03  Thorsten Glaser  <tg@66h.42h.de>
 
 	* libtool.m4 (_LT_AC_TRY_DLOPEN_SELF): Quieten configure output
